# httpx-iap

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
httpx_iap/: __init__.py  __version__.py  account.py
src/httpx_iap/: account.py  auth.py
tests/: conftest.py  test_account.py  test_auth.py  test_private_key.pem
