[tool.poetry]
name = "httpx-iap"
version = "0.1.0"
description = "A Google IAP extension for httpx"
authors = ["Evan Pikulski <epikulski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = "^0.23.3"
PyJWT = "^2.1.0"
cryptography = "^39.0.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
pylint = "^2.17.0"
mypy = "^1.1.1"
black = "^23.1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"
coverage = "^7.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
